--- a/todo.html
+++ b/todo.html
@@ -24,7 +24,7 @@
 		</section>
 	</main>
 	<footer>
-		<p>Designed by [Your Name]</p>
+		<p>Designed by Aman Chandan</p>
 	</footer>
 
 	<script src="app.js"></script>
